# transkripsjonNB

./: .env.example  .gitignore  01-lagSRT.py  02-tekstFilm.py  03-lagOppsummering.py  CLAUDE.md  HuginLokalTranskripsjon.py  Hugin_m4_magic.py  README.md  autotranskribering_NB.py  blobtest.py  com.tfk.hugin-transcription.plist.example  health_check.py  hello.stderr  hello.stdout  huginlog.txt  install.sh  local.example.hello.plist  mini.sh  minimal_asr.py  pyproject.toml  raw.json  run_transcription.sh  test.py  test_mlx_transkriber.py  test_ollama.py  tmp_audio.py  transkriberingHuggingFace.py
lib/: ai_tools.py  hugintranskriptlib.py  transkripsjon_sp_lib.py
testfiles/: README.md
