[project]
name = "hugin-transcription"
version = "1.0.0"
description = "Norwegian transcription service using MLX Whisper from National Library of Norway"
authors = [
    {name = "Telemark Fylkeskommune", email = "support@telemarkfylke.no"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["transcription", "whisper", "norwegian", "azure", "ai"]

dependencies = [
    # Core dependencies
    "openai>=1.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "azure-storage-blob>=12.19.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    # ML and audio processing
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "ffmpeg-python>=0.2.0",
    # Additional utilities
    "tqdm>=4.65.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "librosa>=0.10.0",
    "mlx>=0.29.1",
    "mlx-whisper>=0.4.3",
    "ollama>=0.5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/telemarkfylke/transkripsjonNB"
Repository = "https://github.com/telemarkfylke/transkripsjonNB"
Issues = "https://github.com/telemarkfylke/transkripsjonNB/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
